--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha unittestcase/test.spec.js",
+    "ui-tests": "mocha-phantomjs -R json --ssl-protocol=tlsv1 --ignore-ssl-errors=true index.html"
   },
   "repository": {
     "type": "git",
