--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "keywords": [],
   "author": "StackRoute",
   "license": "Apache-2.0",
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "chai": "^4.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
+  }
 }
