--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "author": "StackRoute",
   "license": "Apache-2.0",
   "dependencies": {
-    "chai": "^4.0.2"
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
   },
   "devDependencies": {
     "chai": "^4.0.2",
